cabal-version:      2.4
name:               libVector
version:            0.1.0.0

Test-Suite testLibVector
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    app
  main-is:
    Tests.hs
  build-depends:
      base >= 4 && < 5
    , vector ^>=0.12
    , tasty ^>= 1.4
    , QuickCheck ^>= 2.14
    , tasty-quickcheck
-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable libVector
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Line
                      Point
                      Test
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0,
                      vector ^>=0.12,
                      QuickCheck ^>= 2.14,
                      tasty-quickcheck,
                      tasty ^>= 1.4
    hs-source-dirs:   app
    default-language: Haskell2010
